# rax

./: .gitignore  Cargo.toml  README.md
.codex/context/: ACTIVE_TASK.md
apps/ios-harness-host/: Package.swift  README.md
apps/ios-harness-host/.build/: build.db  plugin-tools.yaml
crates/rax-compat-tests/: Cargo.toml
crates/rax-compat-tests/tests/: backup_restore_e2e_tests.rs  backup_restore_file_backend_e2e_tests.rs  parity_mv2s_tests.rs  wax_benchmark_parity_tests.rs
crates/rax-core/: Cargo.toml
crates/rax-core/src/: lib.rs
crates/rax-core/tests/: backup_fault_injection_tests.rs  backup_object_store_compat_tests.rs  binary_codec_tests.rs  binary_spec_contract_tests.rs  constants_tests.rs  delete_supersede_tests.rs  header_footer_tests.rs  incremental_backup_tests.rs  lifecycle_tests.rs  mv2s_streaming_tests.rs  object_store_preflight_tests.rs  open_validation_tests.rs  restore_full_tests.rs  restore_incremental_tests.rs  restore_pitr_tests.rs  smoke_workspace.rs  timeline_query_tests.rs  wal_compaction_tests.rs  wal_entry_tests.rs  wal_replay_tests.rs  wal_ring_tests.rs
crates/rax-media/: Cargo.toml
crates/rax-media/src/: lib.rs  photo_orchestrator.rs  providers.rs  video_orchestrator.rs
crates/rax-media/tests/: photo_rag_orchestrator_tests.rs  video_rag_ingest_tests.rs
crates/rax-orchestrator/: Cargo.toml
crates/rax-orchestrator/src/: lib.rs  live_set_rewrite.rs  maintenance.rs  memory_orchestrator.rs  session.rs  structured_memory.rs
crates/rax-rag/: Cargo.toml
crates/rax-text-search/: Cargo.toml
crates/rax-vector-search/: Cargo.toml
crates/wax-bench-artifacts/: Cargo.toml
crates/wax-bench-cli/: Cargo.toml
crates/wax-bench-cli/src/: main.rs
crates/wax-bench-metrics/: Cargo.toml
crates/wax-bench-model/: Cargo.toml
crates/wax-bench-packer/: Cargo.toml
crates/wax-bench-reducer/: Cargo.toml
crates/wax-bench-runner/: Cargo.toml
crates/wax-bench-text-engine/: Cargo.toml
crates/wax-bench-text-engine/src/: documents.rs  lib.rs  query_support.rs  vector_lane.rs
crates/wax-cli/: Cargo.toml
crates/wax-cli/src/: main.rs
crates/wax-v2-broker/: Cargo.toml
crates/wax-v2-core/: Cargo.toml
crates/wax-v2-docstore/: Cargo.toml
crates/wax-v2-docstore/src/: lib.rs
crates/wax-v2-mcp/: Cargo.toml
crates/wax-v2-mcp/src/: lib.rs  main.rs
crates/wax-v2-multimodal/: Cargo.toml
crates/wax-v2-runtime/: Cargo.toml
crates/wax-v2-runtime/src/: lib.rs
crates/wax-v2-search/: Cargo.toml
crates/wax-v2-structured-memory/: Cargo.toml
crates/wax-v2-text/: Cargo.toml
crates/wax-v2-text/src/: lib.rs
crates/wax-v2-vector/: Cargo.toml
crates/wax-v2-vector/src/: lib.rs
docs/: perf-benchmark-checklist.md
docs/adr/: 0001-vector-backend-selection.md
docs/plans/: 2026-04-19-rax-apple-acceleration-plan.md  2026-04-19-rax-broker-session-plan.md  2026-04-19-rax-compaction-followup-plan.md  2026-04-19-rax-core-foundation-plan.md  2026-04-19-rax-doc-publication-plan.md  2026-04-19-rax-docstore-compatibility-plan.md  2026-04-19-rax-entity-fact-api-plan.md  2026-04-19-rax-mcp-surface-plan.md  2026-04-19-rax-multimodal-ingest-plan.md  2026-04-19-rax-object-envelope-plan.md  2026-04-19-rax-photorag-parity-plan.md  2026-04-19-rax-product-cli-plan.md  2026-04-19-rax-real-segments-plan.md  2026-04-19-rax-runner-core-open-plan.md  2026-04-19-rax-runtime-api-plan.md  2026-04-19-rax-search-crate-plan.md  2026-04-19-rax-search-diagnostics-plan.md  2026-04-19-rax-search-metadata-filtering-plan.md  2026-04-19-rax-snapshot-isolation-plan.md  2026-04-19-rax-structured-memory-plan.md  2026-04-19-rax-text-contract-plan.md  2026-04-19-rax-text-lane-plan.md  2026-04-19-rax-vector-backend-plan.md  2026-04-19-rax-vector-lane-plan.md  2026-04-19-rax-vector-metadata-plan.md  2026-04-19-rax-videorag-parity-plan.md  2026-04-20-rax-raw-product-ingest-plan.md
docs/specs/: 2026-03-29-wax-rust-rewrite-spec.md  2026-03-29-wax-upstream-benchmark-analysis.md  2026-03-29-wax-v1-binary-format.md  2026-03-29-wax-v1-structured-memory-format.md  2026-03-29-wax-v2-architecture.md  2026-03-29-wax-v2-benchmark-harness-plan.md  2026-03-29-wax-v2-benchmark-harness-spec.md  2026-03-29-wax-v2-benchmark-plan.md  2026-03-29-wax-v2-binary-format.md  2026-03-29-wax-v2-dataset-spec.md  2026-03-29-wax-v2-search-fusion.md  2026-03-29-wax-v2-text-lane.md  2026-03-29-wax-v2-ttfq-benchmark-plan.md  2026-03-29-wax-v2-vector-lane.md  2026-03-30-wax-v2-benchmark-harness-implementation-plan.md  2026-03-30-wax-v2-dataset-pack-manifest-schema.md  2026-03-31-wax-evaluation-model.md  2026-03-31-wax-large-vector-compare.md  2026-03-31-wax-upstream-real-comparison.md  2026-04-01-vector-auto-crossover-sweep.md  2026-04-19-rax-to-wax-roadmap.md  2026-04-19-wax-v2-compaction-followup.md  2026-04-20-rax-raw-product-ingest-roadmap.md  mv2s-binary-mini-spec.md
docs/todos/: 2026-04-19-rax-to-wax-master-todo.md  2026-04-20-rax-raw-product-ingest-todo.md
fixtures/rag/: golden_queries.json
fixtures/wax/: README.md  minimal.mv2s
scripts/: bench-release-matrix.sh  bench-vector-mode-compare.sh  pr-review-state.py
tests/contracts/: apple_acceleration_contract.rs  artifact_bundle_contract.rs  artifact_replay_contract.rs  benchmark_identity_contract.rs  benchmark_protocol_contract.rs  broker_session_contract.rs  dataset_manifest_roundtrip.rs  dataset_packer_reproducibility.rs  engine_trait_contract.rs  ios_cold_label_contract.md  local_e2e_smoke.rs  mcp_raw_ingest_contract.rs  mcp_surface_contract.rs  metric_slice_contract.rs  multimodal_ingest_contract.rs  photorag_parity_contract.rs  product_cli_contract.rs  product_raw_ingest_cli_contract.rs  raw_compat_equivalence_contract.rs  raw_compat_publish_semantics_contract.rs  raw_doc_id_authority_contract.rs  raw_document_ingest_contract.rs  raw_ingest_single_publish_contract.rs  raw_vector_ingest_contract.rs  reducer_contract.rs  release_matrix_contract.rs  runner_lifecycle_contract.rs  search_quality_contract.rs  structured_memory_contract.rs  text_engine_contract.rs  vector_engine_contract.rs  videorag_parity_contract.rs  workspace_smoke.rs
(+100 files in other folders)
