[package]
name = "rax"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
  "crates/wax-bench-artifacts",
  "crates/wax-bench-cli",
  "crates/wax-bench-metrics",
  "crates/wax-bench-model",
  "crates/wax-bench-packer",
  "crates/wax-bench-reducer",
  "crates/wax-bench-runner",
]
resolver = "2"

[dev-dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
strum = "0.27.2"
tempfile = "3.23.0"
wax-bench-artifacts = { path = "crates/wax-bench-artifacts" }
wax-bench-model = { path = "crates/wax-bench-model" }
wax-bench-metrics = { path = "crates/wax-bench-metrics" }
wax-bench-packer = { path = "crates/wax-bench-packer" }
wax-bench-reducer = { path = "crates/wax-bench-reducer" }
wax-bench-runner = { path = "crates/wax-bench-runner" }

[[test]]
name = "workspace_smoke"
path = "tests/contracts/workspace_smoke.rs"

[[test]]
name = "engine_trait_contract"
path = "tests/contracts/engine_trait_contract.rs"

[[test]]
name = "benchmark_identity_contract"
path = "tests/contracts/benchmark_identity_contract.rs"

[[test]]
name = "dataset_manifest_roundtrip"
path = "tests/contracts/dataset_manifest_roundtrip.rs"

[[test]]
name = "dataset_packer_reproducibility"
path = "tests/contracts/dataset_packer_reproducibility.rs"

[[test]]
name = "artifact_bundle_contract"
path = "tests/contracts/artifact_bundle_contract.rs"

[[test]]
name = "runner_lifecycle_contract"
path = "tests/contracts/runner_lifecycle_contract.rs"

[[test]]
name = "metric_slice_contract"
path = "tests/contracts/metric_slice_contract.rs"

[[test]]
name = "local_e2e_smoke"
path = "tests/contracts/local_e2e_smoke.rs"

[[test]]
name = "reducer_contract"
path = "tests/contracts/reducer_contract.rs"
