[package]
name = "rax"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
  "crates/wax-cli",
  "crates/wax-v2-broker",
  "crates/wax-v2-core",
  "crates/wax-v2-docstore",
  "crates/wax-v2-mcp",
  "crates/wax-v2-multimodal",
  "crates/wax-v2-runtime",
  "crates/wax-v2-search",
  "crates/wax-v2-structured-memory",
  "crates/wax-v2-text",
  "crates/wax-v2-vector",
  "crates/wax-bench-artifacts",
  "crates/wax-bench-cli",
  "crates/wax-bench-metrics",
  "crates/wax-bench-model",
  "crates/wax-bench-packer",
  "crates/wax-bench-reducer",
  "crates/wax-bench-runner",
  "crates/wax-bench-text-engine",
]
resolver = "2"

[dev-dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
strum = "0.27.2"
tempfile = "3.23.0"
wax-bench-artifacts = { path = "crates/wax-bench-artifacts" }
wax-bench-model = { path = "crates/wax-bench-model" }
wax-bench-metrics = { path = "crates/wax-bench-metrics" }
wax-bench-packer = { path = "crates/wax-bench-packer" }
wax-bench-reducer = { path = "crates/wax-bench-reducer" }
wax-bench-runner = { path = "crates/wax-bench-runner" }
wax-bench-text-engine = { path = "crates/wax-bench-text-engine" }
wax-v2-core = { path = "crates/wax-v2-core" }
wax-v2-docstore = { path = "crates/wax-v2-docstore" }
wax-v2-broker = { path = "crates/wax-v2-broker" }
wax-v2-runtime = { path = "crates/wax-v2-runtime" }
wax-v2-mcp = { path = "crates/wax-v2-mcp" }
wax-v2-multimodal = { path = "crates/wax-v2-multimodal" }
wax-v2-structured-memory = { path = "crates/wax-v2-structured-memory" }
wax-v2-text = { path = "crates/wax-v2-text" }
wax-v2-vector = { path = "crates/wax-v2-vector" }

[[test]]
name = "workspace_smoke"
path = "tests/contracts/workspace_smoke.rs"

[[test]]
name = "engine_trait_contract"
path = "tests/contracts/engine_trait_contract.rs"

[[test]]
name = "benchmark_identity_contract"
path = "tests/contracts/benchmark_identity_contract.rs"

[[test]]
name = "dataset_manifest_roundtrip"
path = "tests/contracts/dataset_manifest_roundtrip.rs"

[[test]]
name = "dataset_packer_reproducibility"
path = "tests/contracts/dataset_packer_reproducibility.rs"

[[test]]
name = "artifact_bundle_contract"
path = "tests/contracts/artifact_bundle_contract.rs"

[[test]]
name = "runner_lifecycle_contract"
path = "tests/contracts/runner_lifecycle_contract.rs"

[[test]]
name = "metric_slice_contract"
path = "tests/contracts/metric_slice_contract.rs"

[[test]]
name = "local_e2e_smoke"
path = "tests/contracts/local_e2e_smoke.rs"

[[test]]
name = "reducer_contract"
path = "tests/contracts/reducer_contract.rs"

[[test]]
name = "artifact_replay_contract"
path = "tests/contracts/artifact_replay_contract.rs"

[[test]]
name = "text_engine_contract"
path = "tests/contracts/text_engine_contract.rs"

[[test]]
name = "vector_engine_contract"
path = "tests/contracts/vector_engine_contract.rs"

[[test]]
name = "release_matrix_contract"
path = "tests/contracts/release_matrix_contract.rs"

[[test]]
name = "search_quality_contract"
path = "tests/contracts/search_quality_contract.rs"

[[test]]
name = "benchmark_protocol_contract"
path = "tests/contracts/benchmark_protocol_contract.rs"

[[test]]
name = "product_cli_contract"
path = "tests/contracts/product_cli_contract.rs"

[[test]]
name = "broker_session_contract"
path = "tests/contracts/broker_session_contract.rs"

[[test]]
name = "mcp_surface_contract"
path = "tests/contracts/mcp_surface_contract.rs"

[[test]]
name = "structured_memory_contract"
path = "tests/contracts/structured_memory_contract.rs"

[[test]]
name = "multimodal_ingest_contract"
path = "tests/contracts/multimodal_ingest_contract.rs"

[[test]]
name = "photorag_parity_contract"
path = "tests/contracts/photorag_parity_contract.rs"

[[test]]
name = "videorag_parity_contract"
path = "tests/contracts/videorag_parity_contract.rs"

[[test]]
name = "apple_acceleration_contract"
path = "tests/contracts/apple_acceleration_contract.rs"

[[test]]
name = "raw_doc_id_authority_contract"
path = "tests/contracts/raw_doc_id_authority_contract.rs"

[[test]]
name = "raw_ingest_single_publish_contract"
path = "tests/contracts/raw_ingest_single_publish_contract.rs"

[[test]]
name = "raw_document_ingest_contract"
path = "tests/contracts/raw_document_ingest_contract.rs"

[[test]]
name = "raw_vector_ingest_contract"
path = "tests/contracts/raw_vector_ingest_contract.rs"

[[test]]
name = "raw_compat_equivalence_contract"
path = "tests/contracts/raw_compat_equivalence_contract.rs"

[[test]]
name = "product_raw_ingest_cli_contract"
path = "tests/contracts/product_raw_ingest_cli_contract.rs"

[[test]]
name = "mcp_raw_ingest_contract"
path = "tests/contracts/mcp_raw_ingest_contract.rs"

[[test]]
name = "raw_compat_publish_semantics_contract"
path = "tests/contracts/raw_compat_publish_semantics_contract.rs"
