[package]
name = "rax-compat-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rax-core = { path = "../rax-core" }
rax-text-search = { path = "../rax-text-search" }
rax-vector-search = { path = "../rax-vector-search" }
rax-rag = { path = "../rax-rag" }
rax-orchestrator = { path = "../rax-orchestrator" }
object_store = "=0.7.0"
tokio = { version = "1", features = ["macros", "rt"] }
