[package]
name = "wax-bench-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
wax-bench-packer = { path = "../wax-bench-packer" }
wax-bench-model = { path = "../wax-bench-model" }
wax-bench-runner = { path = "../wax-bench-runner" }
