[package]
name = "wax-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "wax"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wax-v2-runtime = { path = "../wax-v2-runtime" }
