[package]
name = "wax-v2-docstore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
wax-bench-model = { path = "../wax-bench-model" }
wax-v2-core = { path = "../wax-v2-core" }

[dev-dependencies]
tempfile = "3.23.0"
