[package]
name = "wax-v2-mcp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wax-v2-broker = { path = "../wax-v2-broker" }
wax-v2-runtime = { path = "../wax-v2-runtime" }

[[bin]]
name = "wax-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.23.0"
