[package]
name = "wax-v2-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.145"
wax-bench-model = { path = "../wax-bench-model" }
wax-v2-core = { path = "../wax-v2-core" }
wax-v2-docstore = { path = "../wax-v2-docstore" }
wax-v2-search = { path = "../wax-v2-search" }
wax-v2-text = { path = "../wax-v2-text" }
wax-v2-vector = { path = "../wax-v2-vector" }

[dev-dependencies]
tempfile = "3.23.0"
wax-bench-packer = { path = "../wax-bench-packer" }
wax-v2-text = { path = "../wax-v2-text" }
wax-v2-vector = { path = "../wax-v2-vector" }
